2006-10-11 Sven Salzwedel <sven_salzwedel@web.de>

	* Initial Release